--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <h1 class="ae-1 fromLeft">Abdullah Furkan YEĞİN</h1>
               <h3 class="ae-1 fromLeft">Bilgisayar Mühendisi</h3>
               <p> </p>
-              <p class="ae-2 fromLeft"><span class="opacity-8">Üzerinde çalıştığım projelerle alakalı bilgi ve görsellere aşağıya kaydırarak veya üst tarafta bulunan butonları kullanarak ulaşabilirsiniz. 
+              <p class="ae-2 fromLeft"><span class="opacity-8"> Merhaba, üzerinde çalıştığım projelerle alakalı bilgi ve görsellere aşağıya kaydırarak veya üst tarafta bulunan butonları kullanarak ulaşabilirsiniz. 
                 Proje sayfalarındaki diğer görüntülere geçmek için resimlerin üzerine tıklayabilirsiniz.
               </span></p>
             </li>
