--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           <li class="col-7-12 margin-top-3">
             <h1 class="ae-2 fromRight">CryptApp</h1>
             <div class="ae-3 fromRight">
-              <p class="opacity-8">Bir metin şifreleme uyguluması olan CryptApp'i sıfırdan C# kullanarak Windows Form arayüzünde oluşturdum. Şifreleme yöntemi olarak Vigenere Algoritmasını tercih ettim. Uygulama metinler için hem şifreleme(encryption)
+              <p class="opacity-8">Bir metin şifreleme uyguluması olan CryptApp'i sıfırdan C# kullanarak Windows Forms arayüzünde oluşturdum. Şifreleme yöntemi olarak Vigenere Algoritmasını tercih ettim. Uygulama metinler için hem şifreleme(encryption)
                 hem de şifre çözme(decryption) işlemleri için kullanılmakta. Şifrelenen metni eski haline getirmek için şifrelemede kullanılan anahtarın kullanılması gerekmekte.
                 Ayrıca istenilen metin direk arayüzden girilebildiği gibi harici bir text dosyası uygulamaya yüklenerek de şifreleme ve şifre çözme işlemleri yapılabilmekte.&nbsp;</p>
             </div>
