--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           <li class="col-7-12 margin-top-3">
             <h1 class="ae-2 fromRight">Shoot ID Antrenman Sistemi</h1>
             <div class="ae-3 fromRight">
-              <p class="opacity-8">Futbol eğitimlerinin yapay zeka ve görüntü işleme teknikleriyle akıllı hale getirilmesini amaçlayan bu projede topun kendisinin , Epipolar Geometry ile topun 3 boyutlu alanda konumunun ve
+              <p class="opacity-8">Futbol eğitimlerinin yapay zeka ve görüntü işleme teknikleriyle akıllı hale getirilmesini amaçlayan bu projede topun kendisinin , Epipolar Geometry ile 3 boyutlu alanda konumunun ve
                 hızının tespit edilmesi amaçlanmıştır. Ayrıca topa vuran kişinin kimliği ve hangi ayakla topa vurduğu da belirlenmektedir. Projenin İzmir Altınordu Futbol Kulübü antrenman sahasına kurulumu yapılmış olup geliştirmeler devam etmektedir.&nbsp;
                 <a href="https://youtu.be/p2zZvslHW3c?si=VBUwGYymTaq2xhnh"><b>Video Linki</b></a></p>
             </div>
